# node-wire

./: .copyright.tmpl  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  GOVERNANCE.md  LICENSE  NOTICE  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  SUPPORT.md  Setup.md  docker-compose.mcp.yml  index.html  mkdocs.yml  pyproject.toml  sample.env  sitemap.xml  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql.yml  create-tag.yml  dco.yml  docker-policy.yml  docs.yml  github-release.yml  lint.yml  publish.yml  pytest.yml  quality-gates.yml  secret-scan.yml  security-pr.yml
LICENSES/: Apache-2.0.txt
architecture/: index.html
code-quality-compliance/: index.html
compliance/hipaa-considerations/: index.html
config/: connectors.yaml
configuration/: index.html
connectors/: index.html
contributing/: index.html
docker/fhir-cerner/: Dockerfile
docker/fhir-epic/: Dockerfile
docker/google-drive/: Dockerfile
docker/salesforce/: Dockerfile
docker/slack/: Dockerfile
docker/smtp/: Dockerfile
docker/stripe/: Dockerfile
docs/: architecture.md  code-quality-compliance.md  configuration.md  connectors.md  contributing.md  creating-a-connector.md  google_drive_connector.md  google_drive_upload_root_cause.md  index.md  installation.md  local-packages-to-images.md  mcp-client-oauth.md  mcp-servers.md  mcp.md  packaging.md  privacy.md  public-api.md  quality-security-gates.md  release-rollback.md  salesforce_connector.md  security-gap-report.md  slack_connector.md  toolhive_agent_scenario.md  troubleshooting.md  versioning.md
docs/compliance/: hipaa-considerations.md
docs/stylesheets/: extra.css
google_drive_connector/: index.html
grafana/: README.md  docker-compose.yml
installation/: index.html
local-packages-to-images/: index.html
mcp/: index.html
mcp-builder-files/: salesforce.yaml  salesforce_openapi.yaml  slack.yaml  slack_openapi.yaml
mcp-client-oauth/: index.html
mcp-servers/: index.html
nw-mcp-builder/: README.md  pyproject.toml
nw-mcp-builder/fixtures/: fhir_cerner_nw.yaml  fhir_epic_nw.yaml  salesforce_nw.yaml
nw-mcp-builder/src/nw_mcp_builder/: __init__.py  cli.py  from_connector.py  pipeline.py
nw-mcp-builder/src/nw_mcp_builder/generate/: __init__.py  connector_project.py
nw-mcp-builder/src/nw_mcp_builder/schema/: __init__.py  models.py
packaging/: index.html
playground/: README.md  __init__.py  app.js  index.html  scenario_post_visit.py  scenarios.py  style.css
playground/ext_patient_viewer/: __init__.py  schema.py
privacy/: index.html
public-api/: index.html
quality-security-gates/: index.html
release-rollback/: index.html
salesforce_connector/: index.html
scripts/: README.md  add-license-headers.sh  bandit_report_summary.py  build-mcp-images.sh  build-mcp-server.sh  build-packages.sh  demo_mcp_oauth_mock.py  generate-grpc-stubs.sh  mcp-servers.registry  run-compliance-checks.sh
search/: search_index.json
slack_connector/: index.html
src/: bindings_entrypoint.py
src/agents/: README.md  __init__.py  fhir_cerner_mcp.py  fhir_epic_mcp.py  google_drive_mcp.py  llm_factory.py  mcp_entrypoint.py  salesforce_mcp.py  slack_mcp.py  smtp_mcp.py  stripe_mcp.py  toolhive.py
src/bindings/: __init__.py  factory.py
src/connectors/: __init__.py  manifest.py
src/node_wire_fhir_cerner/: README.md  __init__.py  logic.py  registration.py  schema.py
src/node_wire_fhir_epic/: README.md  __init__.py  logic.py  registration.py  schema.py
src/node_wire_google_drive/: README.md  __init__.py  action_spec.py  exceptions.py  logic.py  registration.py  schema.py
src/node_wire_http_generic/: __init__.py  logic.py  registration.py  schema.py
src/node_wire_runtime/: __init__.py  base_connector.py  caller_identity.py  config_store.py  connector_registry.py  connectors.yaml.sample  errors.py  fhir_encounter.py  identity.py  ingress.py  log_sanitization.py  manifest.py  mcp_contract.py  mcp_normalizers.py  models.py  observability.py  policy.py  rate_limit.py  resilience.py  sdk_action_spec.py  streaming.py
src/node_wire_salesforce/: __init__.py  logic.py  registration.py  schema.py
src/node_wire_slack/: README.md  __init__.py  exceptions.py  logic.py  registration.py  schema.py
src/node_wire_smtp/: __init__.py  logic.py  registration.py  relay.py  schema.py
src/node_wire_stripe/: README.md  __init__.py  logic.py  registration.py  schema.py
src/runtime/: __init__.py  base.py  base_connector.py  fhir_encounter.py  ingress.py  mcp_normalizers.py  policy.py  resilience.py  sdk_connector.py  secrets.py
tests/: conftest.py  jwt_test_helpers.py  test_aot_runtime_basic.py  test_api_key_compare.py  test_auth_providers.py  test_bandit_report_summary.py  test_base_connector_manifest.py  test_call_action_policy.py  test_connector_registry.py  test_connectors_basic.py  test_connectors_io.py  test_entrypoints.py  test_factory_and_rest.py  test_fhir_cerner.py  test_fhir_epic.py  test_fhir_logging.py  test_google_drive.py  test_google_drive_action_spec.py  test_google_drive_build_client.py  test_grpc_async_runner.py  test_grpc_scope_policy.py  test_jwt_validation.py  test_llm_providers.py  test_log_sanitization.py  test_mcp_auth.py  test_mcp_manifest_conformance.py  test_mcp_oauth_client.py  test_mcp_oauth_config.py  test_mcp_oauth_conformance.py  test_mcp_oauth_dcr.py  test_mcp_oauth_discovery.py  test_mcp_oauth_flow.py  test_mcp_oauth_token_lifecycle.py  test_mcp_transport.py  test_multitenancy.py  test_network_bindings.py  test_observability.py  test_payload_redaction.py  test_rest_app_import_env.py  test_rest_body_limit.py  (+13 more)
tests/fixtures/: bandit_minimal_report.json  connectors_for_tests.yaml
tests/nw_mcp_builder/: conftest.py  test_cli.py  test_from_connector.py  test_generated_env.py  test_names.py  test_schema_pipeline.py
toolhive_agent_scenario/: index.html
troubleshooting/: index.html
versioning/: index.html
(+98 files in other folders)
