# SPDX-FileCopyrightText: 2026 AOT Technologies
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "nw-mcp-builder"
version = "0.1.0"
description = "Generate thin MCP hosts from node-wire connectors (wheels + McpServer)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.0,<3.0.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
nw-mcp-builder = "nw_mcp_builder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nw_mcp_builder"]
